--- a/lotrmemorygame/src/components/GameCard/style.css
+++ b/lotrmemorygame/src/components/GameCard/style.css
@@ -1,6 +1,41 @@
-.GameCard img {
-    width: 150px;
-    height: 150px;
-    float: left;
-    margin: 5px;
+.GameCard {
+    width: 100%;
+    height: 100%;
 }
+
+
+.GameCard img {
+    width: 100%;
+    height: 100%;
+    /* float: left;
+    margin: 5px;
+    transition: transform .2s; */
+}
+
+.GameCard:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.7);
+    padding:15px;
+}
+
+.shake {
+     /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s; 
+
+  /* When the animation is finished, start again */
+  animation-iteration-count:2; 
+}
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
